--- a/03-vector-search/hw/hw_module3.ipynb
+++ b/03-vector-search/hw/hw_module3.ipynb
@@ -2,26 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "e75c0e44-cf6e-4207-8a78-0907d2131b88",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sentence_transformers import SentenceTransformer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
+   "id": "2b80b75a-3b00-43a0-af44-c50bb1870b52",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[54], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtqdm\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mauto\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m tqdm\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm.auto import tqdm\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "25f0acf8-9a32-4fd6-9a35-08d0d51dcac6",
    "metadata": {},
    "outputs": [],
@@ -31,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "656aebe8-a215-4493-8993-8410ecb8a2f8",
    "metadata": {},
    "outputs": [],
@@ -49,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "06a77ad6-a3c3-4c06-a55d-b345771f8183",
    "metadata": {},
    "outputs": [],
@@ -59,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "bd21cee1-fb55-4a5a-b9e7-b51bdc07925e",
    "metadata": {},
    "outputs": [],
@@ -69,7 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
+   "id": "95c140ed-80af-4068-8de2-8f9733a746ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "3d216f53-3e4c-4ae5-9e72-edae13f46890",
    "metadata": {},
    "outputs": [
@@ -79,7 +104,7 @@
        "768"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "4f444ec5-ab0e-44a0-a6ed-1e1c03ef61e1",
    "metadata": {},
    "outputs": [
@@ -100,7 +125,7 @@
        "0.078222655"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "61e06fe1-ae4d-496f-86a8-cc469b600858",
    "metadata": {},
    "outputs": [],
@@ -135,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "d6a1c364-cbff-47b0-a927-d18a324506ba",
    "metadata": {},
    "outputs": [
@@ -145,7 +170,7 @@
        "list"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "ece32ce9-32cb-402f-b1ea-572dbc2ae300",
    "metadata": {},
    "outputs": [
@@ -170,7 +195,7 @@
        " 'id': 'c02e79ef'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "f3842990-9e77-4400-a8c3-ac9e1e028701",
    "metadata": {},
    "outputs": [
@@ -191,7 +216,7 @@
        "'data-engineering-zoomcamp'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "a0c651f8-3cff-4c51-ae44-422ad7f4a673",
    "metadata": {},
    "outputs": [],
@@ -219,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "37e6bd36-9431-43bc-a16a-cab922751d98",
    "metadata": {},
    "outputs": [
@@ -229,7 +254,7 @@
        "375"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,8 +266,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "083fb9dc-4dd0-4839-8883-f2fc7b0e869b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_embeddings(model, documents):\n",
+    "    embeddings = []\n",
+    "    for doc in tqdm(documents):\n",
+    "        question = doc['question']\n",
+    "        text = doc['text']\n",
+    "        qa_text = f'{question} {text}'\n",
+    "        encoded = model.encode(qa_text)\n",
+    "        embeddings.append(encoded)\n",
+    "    X = np.array(embeddings)\n",
+    "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "4cdd3204-b708-4872-9abe-8f45f73e4b4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 375/375 [01:03<00:00,  5.91it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = create_embeddings(embedding_model, new_documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f8c4041d-ff76-4615-965e-4dd6cb2ecd7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(375, 768)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0500c061-04e2-48a0-8479-27be51cb9d3e",
+   "metadata": {},
+   "source": [
+    "## Q3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "f8a74294-6584-49c2-8da8-882d677e6e7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = X.dot(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "89161456-5011-4a90-b622-37e06ed57762",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores.argmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "1ba956c6-0202-4652-8fdf-c274439bf53d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6506573"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores[scores.argmax()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ee14045-dad2-4e01-8278-570df62aede9",
+   "metadata": {},
+   "source": [
+    "## Q4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "38c39c84-116e-43cb-8a9b-25afc6749468",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class VectorSearchEngine():\n",
+    "    def __init__(self, documents, embeddings):\n",
+    "        self.documents = documents\n",
+    "        self.embeddings = embeddings\n",
+    "\n",
+    "    def search(self, v_query, num_results=10):\n",
+    "        scores = self.embeddings.dot(v_query)\n",
+    "        idx = np.argsort(-scores)[:num_results]\n",
+    "        return [self.documents[i] for i in idx]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "838d6481-99b8-4a38-bb3f-9bebd7613011",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'text': 'Yes, you can. You won’t be able to submit some of the homeworks, but you can still take part in the course.\\nIn order to get a certificate, you need to submit 2 out of 3 course projects and review 3 peers’ Projects by the deadline. It means that if you join the course at the end of November and manage to work on two projects, you will still be eligible for a certificate.',\n",
+       "  'section': 'General course-related questions',\n",
+       "  'question': 'The course has already started. Can I still join it?',\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'id': 'ee58a693'},\n",
+       " {'text': 'Welcome to the course! Go to the course page (http://mlzoomcamp.com/), scroll down and start going through the course materials. Then read everything in the cohort folder for your cohort’s year.\\nClick on the links and start watching the videos. Also watch office hours from previous cohorts. Go to DTC youtube channel and click on Playlists and search for {course yyyy}. ML Zoomcamp was first launched in 2021.\\nOr you can just use this link: http://mlzoomcamp.com/#syllabus',\n",
+       "  'section': 'General course-related questions',\n",
+       "  'question': 'I just joined. What should I do next? How can I access course materials?',\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'id': '0a278fb2'},\n",
+       " {'text': \"The process is automated now, so you should receive the email eventually. If you haven’t, check your promotions tab in Gmail as well as spam.\\nIf you unsubscribed from our newsletter, you won't get course related updates too.\\nBut don't worry, it’s not a problem. To make sure you don’t miss anything, join the #course-ml-zoomcamp channel in Slack and our telegram channel with announcements. This is enough to follow the course.\",\n",
+       "  'section': 'General course-related questions',\n",
+       "  'question': \"I filled the form, but haven't received a confirmation email. Is it normal?\",\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'id': '6ba259b1'},\n",
+       " {'text': 'Technically, yes. Advisable? Not really. Reasons:\\nSome homework(s) asks for specific python library versions.\\nAnswers may not match in MCQ options if using different languages other than Python 3.10 (the recommended version for 2023 cohort)\\nAnd as for midterms/capstones, your peer-reviewers may not know these other languages. Do you want to be penalized for others not knowing these other languages?\\nYou can create a separate repo using course’s lessons but written in other languages for your own learnings, but not advisable for submissions.\\ntx[source]',\n",
+       "  'section': 'Miscellaneous',\n",
+       "  'question': 'Can I do the course in other languages, like R or Scala?',\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'id': '9f261648'},\n",
+       " {'text': 'We won’t re-record the course videos. The focus of the course and the skills we want to teach remained the same, and the videos are still up-to-date.\\nIf you haven’t taken part in the previous iteration, you can start watching the videos. It’ll be useful for you and you will learn new things. However, we recommend using Python 3.10 now instead of Python 3.8.',\n",
+       "  'section': 'General course-related questions',\n",
+       "  'question': 'The course videos are from the previous iteration. Will you release new ones or we’ll use the videos from 2021?',\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'id': 'e7ba6b8a'}]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search_engine = VectorSearchEngine(documents=new_documents, embeddings=X)\n",
+    "search_engine.search(v, num_results=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c44f45c-17c0-4eb5-92c1-086460102086",
    "metadata": {},
    "outputs": [],
    "source": []
