--- a/03-vector-search/hw/hw_module3.ipynb
+++ b/03-vector-search/hw/hw_module3.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/python/3.10.13/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/usr/local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -300,7 +300,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████| 375/375 [01:30<00:00,  4.13it/s]\n"
+      "100%|██████████| 375/375 [01:11<00:00,  5.28it/s]\n"
      ]
     }
    ],
@@ -559,7 +559,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████| 1830/1830 [01:30<00:00, 20.17it/s]\n"
+      "100%|██████████| 1830/1830 [01:44<00:00, 17.57it/s]\n"
      ]
     },
     {
@@ -650,12 +650,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "es_client = Elasticsearch('http://localhost:9200', request_timeout=30, max_retries=10, retry_on_timeout=True) "
+    "# es_client = Elasticsearch('http://localhost:9200', request_timeout=30, max_retries=10, retry_on_timeout=True) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
+   "id": "3fbf5f42-1b8b-4c5b-b0fe-8dee0b293567",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "es_client = Elasticsearch('http://elasticsearch:9200', request_timeout=30, max_retries=10, retry_on_timeout=True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "64378778-729c-4f8a-abda-217fdf006388",
    "metadata": {},
    "outputs": [],
@@ -685,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "id": "f1c0034c-ed55-4372-b0d7-68b750b34e8d",
    "metadata": {},
    "outputs": [],
@@ -695,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "id": "94691392-0813-4e4b-910f-58c19485a1b3",
    "metadata": {},
    "outputs": [
@@ -705,7 +715,7 @@
        "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'course_questions'})"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "id": "4a50ad0a-f122-4c32-b3bd-6e7d2741d187",
    "metadata": {},
    "outputs": [
@@ -725,7 +735,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "375it [00:08, 44.23it/s]\n"
+      "375it [00:09, 38.24it/s]\n"
      ]
     }
    ],
@@ -737,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "6727dbe4-6ccc-4a0b-a39e-74e37299ae02",
    "metadata": {},
    "outputs": [],
@@ -768,6 +778,117 @@
     "\n",
     "    return result_docs\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "10e53792-3644-43c2-b234-08ae916a543a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def elastic_search_knn_text(embedding_model, question):\n",
+    "    v_q = embedding_model.encode(question)\n",
+    "    return elastic_search_knn_vector(v_q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "311d376c-2a7f-440e-8b6a-f55fb9ef822c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elastic_search_response = elastic_search_knn_text(embedding_model, user_question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "1ba87874-90ce-469b-8e1f-520f487e038f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'question': 'The course has already started. Can I still join it?',\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'section': 'General course-related questions',\n",
+       "  'text': 'Yes, you can. You won’t be able to submit some of the homeworks, but you can still take part in the course.\\nIn order to get a certificate, you need to submit 2 out of 3 course projects and review 3 peers’ Projects by the deadline. It means that if you join the course at the end of November and manage to work on two projects, you will still be eligible for a certificate.',\n",
+       "  'id': 'ee58a693'},\n",
+       " {'question': 'I just joined. What should I do next? How can I access course materials?',\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'section': 'General course-related questions',\n",
+       "  'text': 'Welcome to the course! Go to the course page (http://mlzoomcamp.com/), scroll down and start going through the course materials. Then read everything in the cohort folder for your cohort’s year.\\nClick on the links and start watching the videos. Also watch office hours from previous cohorts. Go to DTC youtube channel and click on Playlists and search for {course yyyy}. ML Zoomcamp was first launched in 2021.\\nOr you can just use this link: http://mlzoomcamp.com/#syllabus',\n",
+       "  'id': '0a278fb2'},\n",
+       " {'question': \"I filled the form, but haven't received a confirmation email. Is it normal?\",\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'section': 'General course-related questions',\n",
+       "  'text': \"The process is automated now, so you should receive the email eventually. If you haven’t, check your promotions tab in Gmail as well as spam.\\nIf you unsubscribed from our newsletter, you won't get course related updates too.\\nBut don't worry, it’s not a problem. To make sure you don’t miss anything, join the #course-ml-zoomcamp channel in Slack and our telegram channel with announcements. This is enough to follow the course.\",\n",
+       "  'id': '6ba259b1'},\n",
+       " {'question': 'Can I do the course in other languages, like R or Scala?',\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'section': 'Miscellaneous',\n",
+       "  'text': 'Technically, yes. Advisable? Not really. Reasons:\\nSome homework(s) asks for specific python library versions.\\nAnswers may not match in MCQ options if using different languages other than Python 3.10 (the recommended version for 2023 cohort)\\nAnd as for midterms/capstones, your peer-reviewers may not know these other languages. Do you want to be penalized for others not knowing these other languages?\\nYou can create a separate repo using course’s lessons but written in other languages for your own learnings, but not advisable for submissions.\\ntx[source]',\n",
+       "  'id': '9f261648'},\n",
+       " {'question': 'The course videos are from the previous iteration. Will you release new ones or we’ll use the videos from 2021?',\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'section': 'General course-related questions',\n",
+       "  'text': 'We won’t re-record the course videos. The focus of the course and the skills we want to teach remained the same, and the videos are still up-to-date.\\nIf you haven’t taken part in the previous iteration, you can start watching the videos. It’ll be useful for you and you will learn new things. However, we recommend using Python 3.10 now instead of Python 3.8.',\n",
+       "  'id': 'e7ba6b8a'}]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elastic_search_response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5367fb7-7431-440a-9ddf-ab1c698761e9",
+   "metadata": {},
+   "source": [
+    "## Q6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "616257f3-beef-4064-8ae9-32c822bab2b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1830/1830 [01:44<00:00, 17.51it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'hit_rate': 0.9398907103825137, 'mrr': 0.8516484517304189}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate(ground_truth, elastic_search_knn_vector, embedding_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74f39052-655b-4631-9bd2-43ba7d4ac96e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -786,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
