--- a/04-monitoring/hw/hw4.ipynb
+++ b/04-monitoring/hw/hw4.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "cb36d0d9-dab4-41af-887d-52424ed2700d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/python/3.10.13/lib/python3.10/site-packages/sentence_transformers/cross_encoder/CrossEncoder.py:11: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm, trange\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import pandas as pd\n",
@@ -17,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "b6cf8530-2877-4d15-ba6a-cff31207b212",
    "metadata": {},
    "outputs": [],
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "6b98e81a-c89c-4375-8d1f-61d4772473a5",
    "metadata": {},
    "outputs": [],
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "a71e5f6c-afed-46b8-962d-42b0ca1d7c38",
    "metadata": {},
    "outputs": [
@@ -221,7 +230,7 @@
        "[300 rows x 5 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f6c161f0-e84c-4646-a590-d2ee24878995",
    "metadata": {},
    "outputs": [],
@@ -280,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "5b84fce1-40a4-46db-bd1b-ed9397f7f359",
    "metadata": {},
    "outputs": [
@@ -290,7 +299,7 @@
        "-0.42244655"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "25322f34-73c4-48ee-9eee-48774d51ce99",
    "metadata": {},
    "outputs": [],
@@ -319,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "c5ded9d9-5d2f-4e10-9cc2-f37073f45079",
    "metadata": {},
    "outputs": [],
@@ -332,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "d491dd0f-14d2-4551-9bd3-8d89731bcd6e",
    "metadata": {},
    "outputs": [],
@@ -345,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "0d3361bd-425b-49cd-87a3-32178fce81b2",
    "metadata": {},
    "outputs": [
@@ -353,7 +362,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing Similarities: 100%|█| 300/300 [02:25<00:00,  \n"
+      "Computing Similarities: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 300/300 [02:27<00:00,  2.04it/s]\n"
      ]
     }
    ],
@@ -363,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "c71ba9fd-6551-4ef5-bf1b-adebf752b2d7",
    "metadata": {},
    "outputs": [],
@@ -374,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "a1d20c38-0e10-4c86-bbc5-92c4ca908180",
    "metadata": {},
    "outputs": [
@@ -392,7 +401,7 @@
        "Name: cosine_sim, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "f3a10dd5-d6c5-4dcb-ab26-ef60c83903b8",
    "metadata": {},
    "outputs": [],
@@ -424,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "f2a4b816-8c21-4986-9526-7ed27f02a452",
    "metadata": {},
    "outputs": [],
@@ -437,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "bf7edf27-0fe4-41dd-acc7-f16b5ce51d26",
    "metadata": {},
    "outputs": [],
@@ -447,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "02f6fc37-2310-4298-953e-594275cfa0a8",
    "metadata": {},
    "outputs": [
@@ -455,7 +464,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing Similarities: 100%|█| 300/300 [02:25<00:00,  \n"
+      "Computing Similarities: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 300/300 [02:24<00:00,  2.07it/s]\n"
      ]
     }
    ],
@@ -465,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "id": "379fa84c-80a3-4f06-9423-1d93bcf7aa6d",
    "metadata": {},
    "outputs": [
@@ -475,7 +484,7 @@
        "300"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "b41d01d3-e5a8-4a29-8bae-4fc3e0a0617d",
    "metadata": {},
    "outputs": [],
@@ -497,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "id": "10fa4d4c-9277-4ea3-aa48-248e1865a1de",
    "metadata": {},
    "outputs": [
@@ -515,7 +524,7 @@
        "Name: cosine_sim, dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "id": "1ed20946-4860-4a89-b97d-fbde063957b8",
    "metadata": {},
    "outputs": [
@@ -713,7 +722,7 @@
        "10  machine-learning-zoomcamp  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "id": "0a64c1cf-e564-4f71-8a5b-1adc5dd6b141",
    "metadata": {},
    "outputs": [],
@@ -734,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "id": "fe27deb6-f8de-4f80-9729-a81eb0ce9e10",
    "metadata": {},
    "outputs": [],
@@ -746,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "id": "a4909b31-5332-4712-b54a-47b9662bb96c",
    "metadata": {},
    "outputs": [
@@ -764,7 +773,7 @@
        "  'f': 0.393939388939394}}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "id": "5894cdb5-27b8-4f2c-9450-9d96ffaa6b65",
    "metadata": {},
    "outputs": [],
@@ -807,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 28,
    "id": "3f52cf01-f7a6-4456-addd-266c10aa0341",
    "metadata": {},
    "outputs": [
@@ -817,7 +826,7 @@
        "{'r': 0.35490035490035493, 'p': 0.35490035490035493, 'f': 0.35490034990035496}"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,29 +853,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "id": "923c3a76-2fc5-404b-bea2-018626046e7f",
    "metadata": {},
    "outputs": [],
    "source": [
     "rouge_score_list = []\n",
-    "rouge_l_score_list = []\n",
-    "def compute_avg_rouge_score(df, rouge_scorer, score_list, l_score_list):\n",
+    "rouge_2_score_list = []\n",
+    "def compute_avg_rouge_score(df, rouge_scorer, score_list, rouge_2_score_list):\n",
     "    for i in tqdm(range(len(df)), desc=\"Computing Rouge score\"):\n",
     "        r = df.iloc[i]\n",
     "        scores = rouge_scorer.get_scores(r['answer_llm'], r['answer_orig'])[0]\n",
     "        rouge_1 = scores['rouge-1']['f']\n",
     "        rouge_2 = scores['rouge-2']['f']\n",
     "        rouge_l = scores['rouge-l']['f']\n",
-    "        l_score_list.append(rouge_l)\n",
+    "        rouge_2_score_list.append(rouge_2)\n",
     "        rouge_avg = (rouge_1 + rouge_2 + rouge_l) / 3\n",
     "        score_list.append(rouge_avg)\n",
-    "    return score_list,l_score_list"
+    "    return score_list,rouge_2_score_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "id": "ea50141e-89cb-480d-8311-285d2c86187a",
    "metadata": {},
    "outputs": [
@@ -874,17 +883,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing Rouge score: 100%|█| 300/300 [00:00<00:00, 34\n"
+      "Computing Rouge score: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 300/300 [00:00<00:00, 332.93it/s]\n"
      ]
     }
    ],
    "source": [
-    "rouge_score_list,rouge_l_score_list = compute_avg_rouge_score(df, rouge_scorer, rouge_score_list,rouge_l_score_list)"
+    "rouge_score_list,rouge_2_score_list = compute_avg_rouge_score(df, rouge_scorer, rouge_score_list,rouge_2_score_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "id": "9b059313-9491-41a7-bfd1-2b04df7f0fcb",
    "metadata": {},
    "outputs": [
@@ -902,7 +911,7 @@
        "Name: rouge_score, dtype: float64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,13 +919,13 @@
    "source": [
     "df3 = df.copy()\n",
     "df3['rouge_score'] = rouge_score_list\n",
-    "df3['rouge_l_score'] = rouge_l_score_list\n",
+    "df3['rouge_2_score'] = rouge_2_score_list\n",
     "df3['rouge_score'].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "id": "1f7e09c3-b9f4-4829-8726-47e39c4924e9",
    "metadata": {},
    "outputs": [
@@ -924,28 +933,28 @@
      "data": {
       "text/plain": [
        "count    300.000000\n",
-       "mean       0.353807\n",
-       "std        0.162965\n",
+       "mean       0.206965\n",
+       "std        0.153550\n",
        "min        0.000000\n",
-       "25%        0.228032\n",
-       "50%        0.337792\n",
-       "75%        0.451613\n",
-       "max        0.850000\n",
-       "Name: rouge_l_score, dtype: float64"
+       "25%        0.097809\n",
+       "50%        0.178671\n",
+       "75%        0.286181\n",
+       "max        0.739130\n",
+       "Name: rouge_2_score, dtype: float64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df3['rouge_l_score'].describe()"
+    "df3['rouge_2_score'].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 33,
    "id": "28ad7de5-76fb-472f-a9ea-7a4fc2331041",
    "metadata": {},
    "outputs": [
@@ -976,7 +985,7 @@
        "      <th>question</th>\n",
        "      <th>course</th>\n",
        "      <th>rouge_score</th>\n",
-       "      <th>rouge_l_score</th>\n",
+       "      <th>rouge_2_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -988,7 +997,7 @@
        "      <td>Where can I sign up for the course?</td>\n",
        "      <td>machine-learning-zoomcamp</td>\n",
        "      <td>0.072882</td>\n",
-       "      <td>0.095238</td>\n",
+       "      <td>0.028169</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -998,7 +1007,7 @@
        "      <td>Can you provide a link to sign up?</td>\n",
        "      <td>machine-learning-zoomcamp</td>\n",
        "      <td>0.091435</td>\n",
-       "      <td>0.093750</td>\n",
+       "      <td>0.055556</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1008,7 +1017,7 @@
        "      <td>Is there an FAQ for this Machine Learning course?</td>\n",
        "      <td>machine-learning-zoomcamp</td>\n",
        "      <td>0.327658</td>\n",
-       "      <td>0.389610</td>\n",
+       "      <td>0.177778</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1018,7 +1027,7 @@
        "      <td>Does this course have a GitHub repository for ...</td>\n",
        "      <td>machine-learning-zoomcamp</td>\n",
        "      <td>0.150821</td>\n",
-       "      <td>0.189189</td>\n",
+       "      <td>0.047059</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1028,7 +1037,7 @@
        "      <td>How can I structure my questions and answers f...</td>\n",
        "      <td>machine-learning-zoomcamp</td>\n",
        "      <td>0.098731</td>\n",
-       "      <td>0.120219</td>\n",
+       "      <td>0.033898</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1048,7 +1057,7 @@
        "      <td>What is an alternative way to load the data us...</td>\n",
        "      <td>machine-learning-zoomcamp</td>\n",
        "      <td>0.604570</td>\n",
-       "      <td>0.618182</td>\n",
+       "      <td>0.540984</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>296</th>\n",
@@ -1058,7 +1067,7 @@
        "      <td>How can I directly download the dataset from G...</td>\n",
        "      <td>machine-learning-zoomcamp</td>\n",
        "      <td>0.535991</td>\n",
-       "      <td>0.557377</td>\n",
+       "      <td>0.460432</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>297</th>\n",
@@ -1068,7 +1077,7 @@
        "      <td>Could you share a method to fetch data for hom...</td>\n",
        "      <td>machine-learning-zoomcamp</td>\n",
        "      <td>0.618851</td>\n",
-       "      <td>0.637168</td>\n",
+       "      <td>0.564516</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>298</th>\n",
@@ -1078,7 +1087,7 @@
        "      <td>What should I do if the status code is 200 whe...</td>\n",
        "      <td>machine-learning-zoomcamp</td>\n",
        "      <td>0.247252</td>\n",
-       "      <td>0.304762</td>\n",
+       "      <td>0.132231</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>299</th>\n",
@@ -1088,7 +1097,7 @@
        "      <td>What does the code using the requests library ...</td>\n",
        "      <td>machine-learning-zoomcamp</td>\n",
        "      <td>0.118954</td>\n",
-       "      <td>0.153846</td>\n",
+       "      <td>0.023529</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1135,23 +1144,23 @@
        "298  What should I do if the status code is 200 whe...   \n",
        "299  What does the code using the requests library ...   \n",
        "\n",
-       "                        course  rouge_score  rouge_l_score  \n",
-       "0    machine-learning-zoomcamp     0.072882       0.095238  \n",
-       "1    machine-learning-zoomcamp     0.091435       0.093750  \n",
-       "2    machine-learning-zoomcamp     0.327658       0.389610  \n",
-       "3    machine-learning-zoomcamp     0.150821       0.189189  \n",
-       "4    machine-learning-zoomcamp     0.098731       0.120219  \n",
+       "                        course  rouge_score  rouge_2_score  \n",
+       "0    machine-learning-zoomcamp     0.072882       0.028169  \n",
+       "1    machine-learning-zoomcamp     0.091435       0.055556  \n",
+       "2    machine-learning-zoomcamp     0.327658       0.177778  \n",
+       "3    machine-learning-zoomcamp     0.150821       0.047059  \n",
+       "4    machine-learning-zoomcamp     0.098731       0.033898  \n",
        "..                         ...          ...            ...  \n",
-       "295  machine-learning-zoomcamp     0.604570       0.618182  \n",
-       "296  machine-learning-zoomcamp     0.535991       0.557377  \n",
-       "297  machine-learning-zoomcamp     0.618851       0.637168  \n",
-       "298  machine-learning-zoomcamp     0.247252       0.304762  \n",
-       "299  machine-learning-zoomcamp     0.118954       0.153846  \n",
+       "295  machine-learning-zoomcamp     0.604570       0.540984  \n",
+       "296  machine-learning-zoomcamp     0.535991       0.460432  \n",
+       "297  machine-learning-zoomcamp     0.618851       0.564516  \n",
+       "298  machine-learning-zoomcamp     0.247252       0.132231  \n",
+       "299  machine-learning-zoomcamp     0.118954       0.023529  \n",
        "\n",
        "[300 rows x 7 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
